# CE-inertial

PCBs/: README.md
PCBs/custom/ethernet/wiznet/: Wiznet.kicad_sym
PCBs/custom/ethernet/wiznet/wiznet/: Wiznet_W5500.stp
PCBs/custom/ethernet/wiznet/wiznet.pretty/: w5500.kicad_mod
PCBs/custom/ethernet/wuerth/: Wuerth.kicad_sym
PCBs/custom/ethernet/wuerth/wuerth.pretty/: RJ45_Wuerth_74980111211_h.kicad_mod
PCBs/custom/mcu/pico/pico.pretty/: RPi_Pico_SMD_TH.kicad_mod
PCBs/custom/mcu/w5500-pico-evb/: pico.kicad_sym  pico.step  pico_evb.step
PCBs/custom/murata/: Murata.kicad_sym
PCBs/custom/murata/murata/: scha.step  scha_.step
PCBs/custom/murata/murata.pretty/: murata_scha.kicad_mod
PCBs/design-files/RPi-Pico/: murata.kicad_sch  pico_extension_v1_1.kicad_pcb  pico_extension_v1_1.kicad_prl  pico_extension_v1_1.kicad_pro  pico_extension_v1_1.kicad_sch  sym-lib-table  wiznet.kicad_sch
PCBs/design-files/W5500-Pico/: murata.kicad_sch  pico_extension.kicad_prl  pico_extension.kicad_pro  pico_extension_v1_2.kicad_pcb  pico_extension_v1_2.kicad_prl  pico_extension_v1_2.kicad_pro  pico_extension_v1_2.kicad_sch  wiznet.kicad_sch
drivers/: README.md
drivers/arduino/: README.md
drivers/arduino/project/: murata.ino
drivers/arduino/scha63x/: README.md  arduino_timers.cpp  arduino_timers.h  arduino_udp.cpp  arduino_udp.h  config.h  defs.h  library.properties  scha63x_driver.cpp  scha63x_driver.h  scha63x_spi.cpp  scha63x_spi.h  scha63x_spi_frame.h  ubx_interrupt.cpp  ubx_interrupt.h
drivers/pico/scha-driver/: CMakeLists.txt  README.md
drivers/pico/scha-driver/main/: CMakeLists.txt  main.c
drivers/pico/scha-driver/scha-driver/: CMakeLists.txt  config.h  defs.h  scha63x-runner.c  scha63x-runner.cpp  scha63x-runner.h  scha63x_driver.c  scha63x_driver.cpp  scha63x_driver.h  scha63x_spi.c  scha63x_spi.h  scha63x_spi_frame.c  scha63x_spi_frame.cpp  scha63x_spi_frame.h
drivers/pico/scha-driver/test/: CMakeLists.txt
host/: README.md
host/ssh-routines/: client_config.yaml  host_config.yaml  libssh-install.md  run_openssh.md
host/ubx-streamer/: README.md  f9r.txt  timestamp.proto  timestamp_pb2.py  ubx_streamer.py
host/udp-recorder/: CMakeLists.txt  README.md
host/udp-recorder/src/: config.h  conversion.cpp  conversion.h  defs.h  main.cpp
(+5 files in other folders)
